# hpa

./: LICENSE  README.md  pyproject.toml  requirements.txt
aircraft/: designer.py  problem.py
hpa/: adapter.py  problem.py
igd_reference_points/n=4/: HPA201-0.csv  HPA201-1.csv  HPA201-2.csv  HPA202-0.csv  HPA202-1.csv  HPA202-2.csv  HPA203-0.csv  HPA203-1.csv  HPA203-2.csv  HPA204-0.csv  HPA204-1.csv  HPA204-2.csv  HPA205-0.csv  HPA205-1.csv  HPA205-2.csv  HPA301-0.csv  HPA301-1.csv  HPA301-2.csv  HPA302-0.csv  HPA302-1.csv  HPA302-2.csv  HPA303-0.csv  HPA303-1.csv  HPA303-2.csv  HPA304-0.csv  HPA304-1.csv  HPA304-2.csv  HPA305-0.csv  HPA305-1.csv  HPA305-2.csv  HPA401-0.csv  HPA401-1.csv  HPA401-2.csv  HPA402-0.csv  HPA402-1.csv  HPA402-2.csv  HPA403-0.csv  HPA403-1.csv  HPA403-2.csv  HPA501-0.csv  (+11 more)
utopia_and_nadir_points/n=4/: utopia_nadir.json
